# OrcaZap

./: .gitignore  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_RESULTS.md  DEPLOY_COMMANDS.md  DEPLOY_NOW.md  DEPLOY_QUICK_FIX.md  IMPLEMENTATION_STATUS.md  INFRASTRUCTURE_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  env.example  pyproject.toml  requirements.txt
.github/workflows/: cd-prod.yml  ci.yml  lint-docs.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tenant_slug.py  003_add_onboarding_fields.py  004_add_stripe_fields.py  005_add_message_templates.py  006_add_template_smart_fields.py  007_add_missing_indexes.py
app/: __init__.py  main.py  settings.py
app/adapters/: __init__.py
app/admin/: __init__.py  auth.py  routes.py
app/core/: __init__.py  csrf.py  dependencies.py  logging_config.py  onboarding_templates.py  operator_auth.py  retry.py  sessions.py  stripe.py  template_validation.py  templates.py
app/db/: base.py  models.py
app/domain/: __init__.py  freight.py  messages.py  metrics.py  parsing.py  pricing.py  quote.py  slug.py  state_machine.py  webhooks.py
app/middleware/: __init__.py  host_routing.py  metrics.py  rate_limit.py  subscription_check.py
app/routers/: __init__.py  api.py  auth.py  monitoring.py  operator.py  public.py  tenant.py
app/templates/: __init__.py
app/worker/: __init__.py  handlers.py  jobs.py
docs/: CSRF_AND_SESSIONS_IMPLEMENTED.md  IMPLEMENTATION_FINAL.md  PHASE_IMPLEMENTATION_COMPLETE.md  PHASE_IMPLEMENTATION_STATUS.md  PRE_DEPLOY_CHECKLIST.md  REMAINING_15_PERCENT.md  REVIEW_BASECOMMERCE_CLEANUP_APPLIED.md  REVIEW_INFRA.md  REVIEW_INFRA_APPLIED.md  REVIEW_INFRA_SUMMARY.md  REVIEW_STEP3_SUMMARY.md  REVIEW_STEP4_APPLIED.md  REVIEW_STEP4_SUMMARY.md  REVIEW_STEP5.md  REVIEW_STEP5_SUMMARY.md  STEP4_COMPLETE.md  STEP5_COMPLETE.md  TECH_LEAD_REVIEW.md  TECH_LEAD_REVIEW_APPLIED.md  TECH_LEAD_REVIEW_SUMMARY.md  admin_ui.md  architecture.md  data_model.md  deployment.md  flows.md  index.md  infra.md  infra_domains_tls.md  message_templates.md  saas_domains_architecture.md  security.md  state_machine.md  whatsapp.md  worker.md
docs/adr/: 0001-why-rq.md  0002-why-htmx.md  0003-host-based-multitenancy.md  0004-systemd-deploy.md
docs/archive/: CSRF_AND_SESSIONS_IMPLEMENTED.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_RESULTS.md  DEPLOY_COMMANDS.md  DEPLOY_NOW.md  DEPLOY_QUICK_FIX.md  IMPLEMENTATION_FINAL.md  INFRASTRUCTURE_DEPLOYMENT.md  INFRA_COMPLETE.md  PHASE_IMPLEMENTATION_COMPLETE.md  PHASE_IMPLEMENTATION_STATUS.md  (+20 more)
infra/: README.md  deploy_key  deploy_key.pub  origin.key  origin.pem
scripts/: README.md  deploy_infrastructure.sh  lint-docs.sh  purge-git-history.sh  setup_and_test.sh  setup_local_infra.sh  setup_local_infra_no_sudo.sh  start_services.sh
tests/: test_trivial.py
(+71 files in other folders)
